alignment in reservation page fixed

--- a/src/reservedSpots/reservedSpot.css
+++ b/src/reservedSpots/reservedSpot.css
@@ -11,9 +11,10 @@
   height: 60px;
   margin-left: 10px;
 }
-.title-prompt{
-margin-left: 80px;
-font-family: Arial, Helvetica, sans-serif;
+
+.title-prompt {
+  margin-left: 80px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .top-line {
@@ -27,22 +28,28 @@ font-family: Arial, Helvetica, sans-serif;
   border-top: 3px solid rgb(0, 0, 0);
   height: 3px;
   width: 100%;
-  margin-top: 190px;
+  margin-top: 550px;
 }
-.timeleft-prompt{
-  margin-left:550px;
+
+.timeleft-prompt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: Arial, Helvetica, sans-serif;
-  
+  margin-top: 20px; 
 }
-#timer{
-  margin-left: 700px;
-  margin-top:50px;
+
+#timer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px; 
   font-size: 50px;
 }
 
 .button-container {
   display: flex;
-  justify-content: space-around; 
+  justify-content: space-around;
   align-items: center;
   margin-top: 20px;
 }
@@ -58,7 +65,7 @@ font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   transition: background-color 0.3s, transform 0.3s;
   cursor: pointer;
-  margin: 10px 0; 
+  margin: 10px 0; /* Add space between buttons */
 }
 
 .Back-btn {
@@ -72,7 +79,7 @@ font-family: Arial, Helvetica, sans-serif;
 .Confirm-btn {
   background-color: #4caf50;
 }
-.Confirm-btn:hover{
-    background-color: #39ff35;
-    
+
+.Confirm-btn:hover {
+  background-color: #51ca4f;
 }
